--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <!--==================== HEADER ====================-->
     <header class="header header-pages" id="header">
       <nav class="nav container">
-        <a class="nav__logo" href="/">Liz</a>
+        <a class="nav__logo" href="index.html">Mariam</a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
@@ -76,7 +76,7 @@
           <div class="about__perfile perfile">
             <div class="perfile__content">
               <img
-                src="assets/img/about-perfil.png"
+                src="assets/img/profile.png"
                 alt="About Profile Image"
                 class="perfile__img"
               />
@@ -86,16 +86,20 @@
           <div class="about__content grid">
             <div class="about__data grid">
               <div class="about__info grid">
-                <h1 class="about__name">Liz Delz</h1>
-                <h2 class="about__profession">Web & Visual Designer</h2>
+                <h1 class="about__name">Mariam Batadze</h1>
+                <h2 class="about__profession">
+                  Interior Designer & Graphic Designer
+                </h2>
                 <p class="about__description">
-                  Passionate about creating <b>Web Pages</b> with
-                  <b>UI/UX User Interface</b>, I have years of experience and
-                  many clients are happy with the projects carried out.
+                  Driven by a deep passion for <b>Interior Design</b> and
+                  <b>Graphic Design</b>, I pour my heart into every project.
+                  With a genuine love for this field, I bring creativity,
+                  dedication, and a keen eye for detail to every space and
+                  product I design.
                 </p>
               </div>
 
-              <a class="about__button button" href="/contact">Contact Me</a>
+              <a class="about__button button" href="contact.html">Contact Me</a>
             </div>
 
             <div class="about__skills">
@@ -103,57 +107,12 @@
 
               <div class="about__skills-content grid">
                 <img
-                  src="assets/img/about-html.svg"
+                  src="assets/img/revit.png"
                   alt="About Skills Image"
                   class="about__skills-img"
                 />
                 <img
-                  src="assets/img/about-css.svg"
-                  alt="About Skills Image"
-                  class="about__skills-img"
-                />
-                <img
-                  src="assets/img/about-javascript.svg"
-                  alt="About Skills Image"
-                  class="about__skills-img"
-                />
-                <img
-                  src="assets/img/about-git.svg"
-                  alt="About Skills Image"
-                  class="about__skills-img"
-                />
-                <img
-                  src="assets/img/about-react.svg"
-                  alt="About Skills Image"
-                  class="about__skills-img"
-                />
-                <img
-                  src="assets/img/about-github.svg"
-                  alt="About Skills Image"
-                  class="about__skills-img"
-                />
-                <img
-                  src="assets/img/about-next-js.svg"
-                  alt="About Skills Image"
-                  class="about__skills-img"
-                />
-                <img
-                  src="assets/img/about-sass.svg"
-                  alt="About Skills Image"
-                  class="about__skills-img"
-                />
-                <img
-                  src="assets/img/about-tailwind-css.svg"
-                  alt="About Skills Image"
-                  class="about__skills-img"
-                />
-                <img
-                  src="assets/img/about-figma.svg"
-                  alt="About Skills Image"
-                  class="about__skills-img"
-                />
-                <img
-                  src="assets/img/about-sketch.svg"
+                  src="assets/img/3dMax.png"
                   alt="About Skills Image"
                   class="about__skills-img"
                 />
@@ -164,6 +123,16 @@
                 />
                 <img
                   src="assets/img/about-illustrator.svg"
+                  alt="About Skills Image"
+                  class="about__skills-img"
+                />
+                <img
+                  src="assets/img/procreate.png"
+                  alt="About Skills Image"
+                  class="about__skills-img"
+                />
+                <img
+                  src="assets/img/archicad.jpg"
                   alt="About Skills Image"
                   class="about__skills-img"
                 />
@@ -178,7 +147,7 @@
     <footer class="footer">
       <div class="footer__container container grid">
         <div class="footer__content grid">
-          <a class="footer__logo" href="index.html">Liz</a>
+          <a class="footer__logo" href="index.html">Mariam</a>
 
           <ul class="footer__links">
             <li>
