--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <!--==================== HEADER ====================-->
     <header class="header header-pages" id="header">
       <nav class="nav container">
-        <a class="nav__logo" href="/">Liz</a>
+        <a class="nav__logo" href="index.html">Mariam</a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
@@ -126,7 +126,7 @@
     <footer class="footer">
       <div class="footer__container container grid">
         <div class="footer__content grid">
-          <a class="footer__logo" href="index.html">Liz</a>
+          <a class="footer__logo" href="index.html">Mariam</a>
 
           <ul class="footer__links">
             <li>
