--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
       <nav class="nav container">
-        <a class="nav__logo" href="/">Liz</a>
+        <a class="nav__logo" href="index.html">Mariam</a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
@@ -78,7 +78,7 @@
           <div class="home__perfile perfile">
             <div class="perfile__content">
               <img
-                src="assets/img/home-perfil.png"
+                src="assets/img/profile.png"
                 alt="Home Profile Image"
                 class="perfile__img"
               />
@@ -87,21 +87,15 @@
 
           <div class="home__content grid">
             <div class="home__data grid">
-              <h1 class="home__name">Liz Delz</h1>
+              <h1 class="home__name">Mariam Batadze</h1>
 
-              <h2 class="home__profession">Web & Visual Designer</h2>
+              <h2 class="home__profession">
+                Interior Designer & Graphic Designer
+              </h2>
 
               <div class="home__social">
                 <a
-                  href="https://github.com/"
-                  target="_blank"
-                  class="home__social-link"
-                >
-                  <i class="ri-github-fill"></i>
-                </a>
-
-                <a
-                  href="https://www.linkedin.com/"
+                  href="https://www.linkedin.com/in/mariam-batadze-21362a294/"
                   target="_blank"
                   class="home__social-link"
                 >
@@ -109,11 +103,11 @@
                 </a>
 
                 <a
-                  href="https://dribbble.com/"
+                  href="https://www.behance.net/mariambatadze"
                   target="_blank"
                   class="home__social-link"
                 >
-                  <i class="ri-dribbble-line"></i>
+                  <i class="ri-behance-line"></i>
                 </a>
               </div>
             </div>
@@ -338,82 +332,6 @@
       </section>
 
       <!--==================== TESTIMONIAL ====================-->
-      <section class="testimonial section">
-        <h2 class="section__title">What They Say <br />About Me?</h2>
-
-        <div class="testimonial__container container">
-          <div class="testimonial__swiper swiper">
-            <div class="swiper-wrapper">
-              <article class="testimonial__card swiper-slide">
-                <div class="testimonial__border">
-                  <img
-                    src="assets/img/testimonial-1.png"
-                    alt="Home Testimonial Image"
-                    class="testimonial__img"
-                  />
-                </div>
-
-                <h2 class="testimonial__name">Jen Will</h2>
-                <p class="testimonial__description">
-                  I hired a project and the services were of quality, the work
-                  delivered is of good content, excellent work.
-                </p>
-              </article>
-
-              <article class="testimonial__card swiper-slide">
-                <div class="testimonial__border">
-                  <img
-                    src="assets/img/testimonial-2.png"
-                    alt="Home Testimonial Image"
-                    class="testimonial__img"
-                  />
-                </div>
-
-                <h2 class="testimonial__name">Rial Loz</h2>
-                <p class="testimonial__description">
-                  I hired a project and the services were of quality, the work
-                  delivered is of good content, excellent work.
-                </p>
-              </article>
-
-              <article class="testimonial__card swiper-slide">
-                <div class="testimonial__border">
-                  <img
-                    src="assets/img/testimonial-3.png"
-                    alt="Home Testimonial Image"
-                    class="testimonial__img"
-                  />
-                </div>
-
-                <h2 class="testimonial__name">Mey Doth</h2>
-                <p class="testimonial__description">
-                  I hired a project and the services were of quality, the work
-                  delivered is of good content, excellent work.
-                </p>
-              </article>
-
-              <article class="testimonial__card swiper-slide">
-                <div class="testimonial__border">
-                  <img
-                    src="assets/img/testimonial-4.png"
-                    alt="Home Testimonial Image"
-                    class="testimonial__img"
-                  />
-                </div>
-
-                <h2 class="testimonial__name">Celi Phet</h2>
-                <p class="testimonial__description">
-                  I hired a project and the services were of quality, the work
-                  delivered is of good content, excellent work.
-                </p>
-              </article>
-            </div>
-          </div>
-
-          <!-- Pagination -->
-          <div class="swiper-pagination"></div>
-        </div>
-      </section>
 
       <!--==================== CONTACT ====================-->
       <section class="contact section">
@@ -423,7 +341,7 @@
             About Your Project
           </h2>
 
-          <a class="contact__button button" href="/contact">Contact Me</a>
+          <a class="contact__button button" href="contact.html">Contact Me</a>
         </div>
       </section>
     </main>
@@ -432,7 +350,7 @@
     <footer class="footer">
       <div class="footer__container container grid">
         <div class="footer__content grid">
-          <a class="footer__logo" href="index.html">Liz</a>
+          <a class="footer__logo" href="index.html">Mariam</a>
 
           <ul class="footer__links">
             <li>
@@ -450,7 +368,7 @@
 
           <div class="footer__social">
             <a
-              href="https://www.facebook.com/"
+              href="https://www.facebook.com/mari.batadze.1"
               target="_blank"
               class="footer__social-link"
             >
@@ -458,23 +376,14 @@
             </a>
 
             <a
-              href="https://www.instagram.com/"
+              href="https://www.instagram.com/martsyyyy/"
               target="_blank"
               class="footer__social-link"
             >
               <i class="ri-instagram-fill"></i>
             </a>
-
             <a
-              href="https://twitter.com/"
-              target="_blank"
-              class="footer__social-link"
-            >
-              <i class="ri-twitter-x-fill"></i>
-            </a>
-
-            <a
-              href="https://www.linkedin.com/"
+              href="https://www.linkedin.com/in/mariam-batadze-21362a294/"
               target="_blank"
               class="footer__social-link"
             >
