--- a/index.html
+++ b/index.html
@@ -129,10 +129,11 @@
         <div class="services__container container grid">
           <article class="services__card">
             <i class="ri-code-s-slash-line services__icon"></i>
-            <h2 class="services__title">Web Developer</h2>
+            <h2 class="services__title">Interior Designer</h2>
             <p class="services__description">
-              Beautiful and elegant designs with interfaces that are intuitive,
-              efficient and pleasant to use for the user.
+              Crafting stunning and sophisticated spaces with interfaces that
+              seamlessly blend beauty and functionality, ensuring an immersive
+              and delightful experience for every client.
             </p>
             <button class="services__button button">Know More</button>
 
@@ -140,24 +141,25 @@
               <div class="services__modal-content">
                 <i class="ri-close-line services__modal-close"></i>
 
-                <h2 class="services__modal-title">Web Developer</h2>
-
+                <h2 class="services__modal-title">Interior Designer</h2>
                 <ul class="services__modal-list grid">
                   <li class="services__modal-item">
-                    Create professional and quality websites at the client's
-                    request.
+                    Proficient in Revit, 3Ds Max, ArchiCad and Adobe Creative
+                    Suite (Photoshop, Illustrator)
                   </li>
 
                   <li class="services__modal-item">
-                    I do web design in prototypes.
+                    Strong understanding of design principles, spatial
+                    relationships, and building codes
                   </li>
 
                   <li class="services__modal-item">
-                    I position your website with advanced SEO.
+                    Knowledge of sustainable design practices and materials
                   </li>
 
                   <li class="services__modal-item">
-                    I solve performance problems on web pages.
+                    Ability to work independently and collaboratively in a
+                    fast-paced environment
                   </li>
                 </ul>
               </div>
@@ -166,10 +168,11 @@
 
           <article class="services__card">
             <i class="ri-pen-nib-line services__icon"></i>
-            <h2 class="services__title">Web Designer</h2>
+            <h2 class="services__title">Graphic Designer</h2>
             <p class="services__description">
-              Beautiful and elegant designs with interfaces that are intuitive,
-              efficient and pleasant to use for the user.
+              Crafting visually stunning graphics that seamlessly fuse elegance
+              with usability, ensuring an engaging and delightful experience for
+              every viewer
             </p>
             <button class="services__button button">Know More</button>
 
@@ -177,61 +180,25 @@
               <div class="services__modal-content">
                 <i class="ri-close-line services__modal-close"></i>
 
-                <h2 class="services__modal-title">Web Designer</h2>
+                <h2 class="services__modal-title">Graphic Designer</h2>
 
                 <ul class="services__modal-list grid">
                   <li class="services__modal-item">
-                    Create professional and quality websites at the client's
-                    request.
+                    Proficient in Adobe Creative Suite (Photoshop, Illustrator)
                   </li>
 
                   <li class="services__modal-item">
-                    I do web design in prototypes.
+                    Strong understanding of design principles, typography, and
+                    color theory
                   </li>
 
                   <li class="services__modal-item">
-                    I position your website with advanced SEO.
+                    Knowledge of print production processes and specifications
                   </li>
 
                   <li class="services__modal-item">
-                    I solve performance problems on web pages.
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </article>
-
-          <article class="services__card">
-            <i class="ri-layout-2-line services__icon"></i>
-            <h2 class="services__title">Interfaces UI/UX</h2>
-            <p class="services__description">
-              Beautiful and elegant designs with interfaces that are intuitive,
-              efficient and pleasant to use for the user.
-            </p>
-            <button class="services__button button">Know More</button>
-
-            <div class="services__modal">
-              <div class="services__modal-content">
-                <i class="ri-close-line services__modal-close"></i>
-
-                <h2 class="services__modal-title">Interfaces UI/UX</h2>
-
-                <ul class="services__modal-list grid">
-                  <li class="services__modal-item">
-                    Create professional and quality websites at the client's
-                    request.
-                  </li>
-
-                  <li class="services__modal-item">
-                    I do web design in prototypes.
-                  </li>
-
-                  <li class="services__modal-item">
-                    I position your website with advanced SEO.
-                  </li>
-
-                  <li class="services__modal-item">
-                    I solve performance problems on web pages.
+                    Ability to manage multiple projects and prioritize tasks
+                    effectively
                   </li>
                 </ul>
               </div>
