--- a/contact.html
+++ b/contact.html
@@ -68,10 +68,7 @@
     <main class="main">
       <!--==================== CONTACT ====================-->
       <section class="contact section">
-        <h2 class="section__title">
-          Let's Talk <br />
-          About Your Project
-        </h2>
+        <h2 class="section__title">Connect With Me</h2>
 
         <div class="contact__page container grid">
           <form action="" class="contact__form grid" id="contact-form">
