--- a/index.html
+++ b/index.html
@@ -303,10 +303,7 @@
       <!--==================== CONTACT ====================-->
       <section class="contact section">
         <div class="contact__container container grid">
-          <h2 class="section__title">
-            Let's Talk <br />
-            About Your Project
-          </h2>
+          <h2 class="section__title">Connect With Me</h2>
 
           <a class="contact__button button" href="contact.html">Contact Me</a>
         </div>
