--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@
 
           <div class="footer__social">
             <a
-              href="https://www.facebook.com/"
+              href="https://www.facebook.com/mari.batadze.1"
               target="_blank"
               class="footer__social-link"
             >
@@ -149,23 +149,14 @@
             </a>
 
             <a
-              href="https://www.instagram.com/"
+              href="https://www.instagram.com/martsyyyy/"
               target="_blank"
               class="footer__social-link"
             >
               <i class="ri-instagram-fill"></i>
             </a>
-
             <a
-              href="https://twitter.com/"
-              target="_blank"
-              class="footer__social-link"
-            >
-              <i class="ri-twitter-x-fill"></i>
-            </a>
-
-            <a
-              href="https://www.linkedin.com/"
+              href="https://www.linkedin.com/in/mariam-batadze-21362a294/"
               target="_blank"
               class="footer__social-link"
             >
