--- a/work.html
+++ b/work.html
@@ -72,17 +72,17 @@
 
         <div class="work__container work__page container grid">
           <article class="work__card">
-            <a href="#" target="_blank" class="work__link">
+            <a href="project.html?id=1" class="work__link">
               <img
-                src="assets/img/work-1.png"
+                src="assets/img/projects/Colour.jpg"
                 alt="Home Work Image"
                 class="work__img"
               />
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Creative Website</h2>
-            <span class="work__subtitle">Website Design</span>
+            <h2 class="work__title">Residential Apartment</h2>
+            <span class="work__subtitle">Interior Design</span>
           </article>
 
           <article class="work__card">
