--- a/project.html
+++ b/project.html
@@ -21,7 +21,7 @@
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
 
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
     <header class="header header-pages" id="header">
