--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <title>Contact - Responsive portfolio website - Bedimcode</title>
+    <title>Contact</title>
   </head>
   <body>
     <!--==================== HEADER ====================-->
@@ -164,9 +164,6 @@
             </a>
           </div>
         </div>
-        <span class="footer__copy"
-          >&#169; All Rights Reserved By Bedimcode</span
-        >
       </div>
     </footer>
 
