--- a/project.html
+++ b/project.html
@@ -26,6 +26,7 @@
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <title>Project</title>
   </head>
   <body>
     <header class="header header-pages" id="header">
@@ -127,14 +128,12 @@
             </a>
           </div>
         </div>
-        <span class="footer__copy"
-          >&#169; All Rights Reserved By Bedimcode</span
-        >
       </div>
     </footer>
 
     <script src="assets/js/main.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
 
     <script src="assets/js/swiper-bundle.min.js"></script>
 
