--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <title>Responsive portfolio website - Bedimcode</title>
+    <title>Home</title>
   </head>
   <body>
     <!--==================== HEADER ====================-->
@@ -112,10 +112,7 @@
               </div>
             </div>
 
-            <a
-              href="assets/pdf/Liz-Cv.pdf"
-              download=""
-              class="home__button button"
+            <a href="./assets/Files/CV.png" download class="home__button button"
               >Download CV</a
             >
           </div>
@@ -215,7 +212,8 @@
           <article class="work__card">
             <a href="project.html?id=1" class="work__link">
               <img
-                src="assets/img/projects/Colour.jpg"
+                loading="lazy"
+                src="./assets/img/projects/Colour.jpg"
                 alt="Home Work Image"
                 class="work__img"
               />
@@ -227,73 +225,108 @@
           </article>
 
           <article class="work__card">
-            <a href="#" target="_blank" class="work__link">
+            <a href="project.html?id=2" class="work__link">
               <img
-                src="assets/img/work-2.png"
+                loading="lazy"
+                src="./assets/img/projects/Meditation/meditation1.jpg"
                 alt="Home Work Image"
                 class="work__img"
               />
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Creative Website</h2>
-            <span class="work__subtitle">Website Design</span>
+            <h2 class="work__title">Meditation</h2>
+            <span class="work__subtitle">Interior Design</span>
           </article>
 
           <article class="work__card">
-            <a href="#" target="_blank" class="work__link">
+            <a href="project.html?id=3" class="work__link">
               <img
-                src="assets/img/work-3.png"
+                loading="lazy"
+                src="./assets/img/projects/PH/PH-1.jpg"
                 alt="Home Work Image"
                 class="work__img"
               />
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Awesome App</h2>
-            <span class="work__subtitle">App Design</span>
+            <h2 class="work__title">PH</h2>
+            <span class="work__subtitle">Interior Design</span>
           </article>
 
           <article class="work__card">
-            <a href="#" target="_blank" class="work__link">
+            <a href="project.html?id=4" class="work__link">
               <img
-                src="assets/img/work-4.png"
+                loading="lazy"
+                src="./assets/img/projects/Furniture/Furniture1.jpg"
                 alt="Home Work Image"
                 class="work__img"
               />
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Awesome App</h2>
-            <span class="work__subtitle">App Design</span>
+            <h2 class="work__title">Furniture</h2>
+            <span class="work__subtitle">Interior Design</span>
           </article>
 
           <article class="work__card">
-            <a href="#" target="_blank" class="work__link">
+            <a href="project.html?id=5" class="work__link">
               <img
-                src="assets/img/work-5.png"
+                loading="lazy"
+                src="./assets/img/projects/Cafe/Cafe1.jpg"
                 alt="Home Work Image"
                 class="work__img"
               />
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Interface Design</h2>
-            <span class="work__subtitle">UI/UX</span>
+            <h2 class="work__title">Cafe</h2>
+            <span class="work__subtitle">Interior Design</span>
           </article>
 
           <article class="work__card">
-            <a href="#" target="_blank" class="work__link">
+            <a href="project.html?id=6" class="work__link">
               <img
-                src="assets/img/work-6.png"
+                loading="lazy"
+                src="./assets/img/projects/Winery/wine-1.jpg"
                 alt="Home Work Image"
                 class="work__img"
               />
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Interface Design</h2>
-            <span class="work__subtitle">UI/UX</span>
+            <h2 class="work__title">Winery</h2>
+            <span class="work__subtitle">Interior Design</span>
+          </article>
+
+          <article class="work__card">
+            <a href="project.html?id=7" class="work__link">
+              <img
+                loading="lazy"
+                src="./assets/img/projects/Winery/wine-1.jpg"
+                alt="Home Work Image"
+                class="work__img"
+              />
+              <i class="ri-arrow-right-circle-line work__icon"></i>
+            </a>
+
+            <h2 class="work__title">Projects</h2>
+            <span class="work__subtitle">Graphic Design</span>
+          </article>
+
+          <article class="work__card">
+            <a href="project.html?id=8" class="work__link">
+              <img
+                loading="lazy"
+                src="./assets/img/projects/MooodBoards/moodboard1.jpg"
+                alt="Home Work Image"
+                class="work__img"
+              />
+              <i class="ri-arrow-right-circle-line work__icon"></i>
+            </a>
+
+            <h2 class="work__title">Projects</h2>
+            <span class="work__subtitle">Mood Boards</span>
           </article>
         </div>
       </section>
@@ -355,9 +388,6 @@
             </a>
           </div>
         </div>
-        <span class="footer__copy"
-          >&#169; All Rights Reserved By Bedimcode</span
-        >
       </div>
     </footer>
 
