--- a/index.html
+++ b/index.html
@@ -328,6 +328,36 @@
             <h2 class="work__title">Projects</h2>
             <span class="work__subtitle">Mood Boards</span>
           </article>
+
+          <article class="work__card">
+            <a href="project.html?id=9" class="work__link">
+              <img
+                loading="lazy"
+                src="./assets/img/projects/TechnicalDrawings/hall.jpg"
+                alt="Home Work Image"
+                class="work__img"
+              />
+              <i class="ri-arrow-right-circle-line work__icon"></i>
+            </a>
+
+            <h2 class="work__title">Projects</h2>
+            <span class="work__subtitle">Technical Drawings</span>
+          </article>
+
+          <article class="work__card">
+            <a href="project.html?id=10" class="work__link">
+              <img
+                loading="lazy"
+                src="./assets/img/projects/ErgonomicPlanning/მარიამ-ბათაძე-61901-2.jpg"
+                alt="Home Work Image"
+                class="work__img"
+              />
+              <i class="ri-arrow-right-circle-line work__icon"></i>
+            </a>
+
+            <h2 class="work__title">Projects</h2>
+            <span class="work__subtitle">Ergonomic Planning</span>
+          </article>
         </div>
       </section>
 
