--- a/index.html
+++ b/index.html
@@ -220,7 +220,9 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Residential Apartment</h2>
+            <h2 class="work__title">
+              Residential Apartment (color and nature)
+            </h2>
             <span class="work__subtitle">Interior Design</span>
           </article>
 
@@ -235,7 +237,7 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Meditation</h2>
+            <h2 class="work__title">Meditation Center (Architecture)</h2>
             <span class="work__subtitle">Interior Design</span>
           </article>
 
@@ -250,7 +252,7 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">PH</h2>
+            <h2 class="work__title">Architecture Physics and Acoustics</h2>
             <span class="work__subtitle">Interior Design</span>
           </article>
 
@@ -265,7 +267,7 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Furniture</h2>
+            <h2 class="work__title">Bank Furniture Design</h2>
             <span class="work__subtitle">Interior Design</span>
           </article>
 
@@ -280,7 +282,7 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Cafe</h2>
+            <h2 class="work__title">Cafe Bar-Interior Design Project</h2>
             <span class="work__subtitle">Interior Design</span>
           </article>
 
@@ -295,7 +297,7 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Winery</h2>
+            <h2 class="work__title">Interior design project for Winery</h2>
             <span class="work__subtitle">Interior Design</span>
           </article>
 
@@ -303,7 +305,7 @@
             <a href="project.html?id=7" class="work__link">
               <img
                 loading="lazy"
-                src="./assets/img/projects/Winery/wine-1.jpg"
+                src="./assets/img/projects/GraphicDesign/Wine_Bottle_with_Glass.jpg"
                 alt="Home Work Image"
                 class="work__img"
               />
@@ -325,8 +327,8 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Projects</h2>
-            <span class="work__subtitle">Mood Boards</span>
+            <h2 class="work__title">MoodBoards</h2>
+            <span class="work__subtitle">Interior Design</span>
           </article>
 
           <article class="work__card">
@@ -340,8 +342,8 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Projects</h2>
-            <span class="work__subtitle">Technical Drawings</span>
+            <h2 class="work__title">Technical Drawings</h2>
+            <span class="work__subtitle">Interior Design</span>
           </article>
 
           <article class="work__card">
@@ -355,8 +357,8 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Projects</h2>
-            <span class="work__subtitle">Ergonomic Planning</span>
+            <h2 class="work__title">Ergonomic Planning</h2>
+            <span class="work__subtitle">Interior Design</span>
           </article>
         </div>
       </section>
