--- a/work.html
+++ b/work.html
@@ -82,7 +82,9 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Residential Apartment</h2>
+            <h2 class="work__title">
+              Residential Apartment (color and nature)
+            </h2>
             <span class="work__subtitle">Interior Design</span>
           </article>
 
@@ -97,7 +99,7 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Meditation</h2>
+            <h2 class="work__title">Meditation Center (Architecture)</h2>
             <span class="work__subtitle">Interior Design</span>
           </article>
 
@@ -112,7 +114,7 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">PH</h2>
+            <h2 class="work__title">Architecture Physics and Acoustics</h2>
             <span class="work__subtitle">Interior Design</span>
           </article>
 
@@ -127,7 +129,7 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Furniture</h2>
+            <h2 class="work__title">Bank Furniture Design</h2>
             <span class="work__subtitle">Interior Design</span>
           </article>
 
@@ -142,7 +144,7 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Cafe</h2>
+            <h2 class="work__title">Cafe Bar-Interior Design Project</h2>
             <span class="work__subtitle">Interior Design</span>
           </article>
 
@@ -157,7 +159,7 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Winery</h2>
+            <h2 class="work__title">Interior design project for Winery</h2>
             <span class="work__subtitle">Interior Design</span>
           </article>
 
@@ -165,7 +167,7 @@
             <a href="project.html?id=7" class="work__link">
               <img
                 loading="lazy"
-                src="./assets/img/projects/Winery/wine-1.jpg"
+                src="./assets/img/projects/GraphicDesign/Wine_Bottle_with_Glass.jpg"
                 alt="Home Work Image"
                 class="work__img"
               />
@@ -187,8 +189,8 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Projects</h2>
-            <span class="work__subtitle">Mood Boards</span>
+            <h2 class="work__title">MoodBoards</h2>
+            <span class="work__subtitle">Interior Design</span>
           </article>
 
           <article class="work__card">
@@ -202,8 +204,8 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Projects</h2>
-            <span class="work__subtitle">Technical Drawings</span>
+            <h2 class="work__title">Technical Drawings</h2>
+            <span class="work__subtitle">Interior Design</span>
           </article>
 
           <article class="work__card">
@@ -217,8 +219,8 @@
               <i class="ri-arrow-right-circle-line work__icon"></i>
             </a>
 
-            <h2 class="work__title">Projects</h2>
-            <span class="work__subtitle">Ergonomic Planning</span>
+            <h2 class="work__title">Ergonomic Planning</h2>
+            <span class="work__subtitle">Interior Design</span>
           </article>
         </div>
       </section>
