--- a/index.html
+++ b/index.html
@@ -505,6 +505,21 @@
             </h2>
             <span class="work__subtitle">Interior Design</span>
           </article>
+
+          <article class="work__card">
+            <a href="project.html?id=20" class="work__link">
+              <img
+                loading="lazy"
+                src="./assets/img/projects/MaterBathroomRenders/master1.jpg"
+                alt="Home Work Image"
+                class="work__img"
+              />
+              <i class="ri-arrow-right-circle-line work__icon"></i>
+            </a>
+
+            <h2 class="work__title">Mater Bathroom Renders</h2>
+            <span class="work__subtitle">Interior Design</span>
+          </article>
         </div>
       </section>
 
