--- a/index.html
+++ b/index.html
@@ -539,6 +539,53 @@
             </h2>
             <span class="work__subtitle">Interior Design</span>
           </article>
+          <article class="work__card">
+            <a href="project.html?id=22" class="work__link">
+              <img
+                loading="lazy"
+                src="./assets/img/projects/LightingDesigninspiredbyamovieAmelie/renders.jpg"
+                alt="Home Work Image"
+                class="work__img"
+              />
+              <i class="ri-arrow-right-circle-line work__icon"></i>
+            </a>
+
+            <h2 class="work__title">
+              Lighting Design inspired by a movie ‘Amelie’
+            </h2>
+            <span class="work__subtitle">Interior Design</span>
+          </article>
+          <article class="work__card">
+            <a href="project.html?id=23" class="work__link">
+              <img
+                loading="lazy"
+                src="./assets/img/projects/OutdoorFurnituredesign/moodboard.jpg"
+                alt="Home Work Image"
+                class="work__img"
+              />
+              <i class="ri-arrow-right-circle-line work__icon"></i>
+            </a>
+
+            <h2 class="work__title">Outdoor Furniture design</h2>
+            <span class="work__subtitle">Interior Design</span>
+          </article>
+
+          <article class="work__card">
+            <a href="project.html?id=24" class="work__link">
+              <img
+                loading="lazy"
+                src="./assets/img/projects/Freelanceinteriordesignproject(ongoing)/Technical.jpg"
+                alt="Home Work Image"
+                class="work__img"
+              />
+              <i class="ri-arrow-right-circle-line work__icon"></i>
+            </a>
+
+            <h2 class="work__title">
+              Freelance interior design project (ongoing)
+            </h2>
+            <span class="work__subtitle">Interior Design</span>
+          </article>
         </div>
       </section>
 
