--- a/index.html
+++ b/index.html
@@ -586,6 +586,23 @@
             </h2>
             <span class="work__subtitle">Interior Design</span>
           </article>
+
+          <article class="work__card">
+            <a href="project.html?id=25" class="work__link">
+              <img
+                loading="lazy"
+                src="./assets/img/projects/InteriorDesignprojectforhotelAmbasciatoriFlorenceItaly/14.png"
+                alt="Home Work Image"
+                class="work__img"
+              />
+              <i class="ri-arrow-right-circle-line work__icon"></i>
+            </a>
+
+            <h2 class="work__title">
+              Interior Design project for hotel Ambasciatori, Florence, Italy.
+            </h2>
+            <span class="work__subtitle">Interior Design</span>
+          </article>
         </div>
       </section>
 
