--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
             <i class="ri-code-s-slash-line services__icon"></i>
             <h2 class="services__title">Interior Designer</h2>
             <p class="services__description">
-              Crafting stunning and sophisticated spaces with interfaces that
-              seamlessly blend beauty and functionality, ensuring an immersive
-              and delightful experience for every client.
+              creating beautiful and thoughtful spaces where the various
+              elements work together smoothly, aiming to provide a truly
+              pleasant experience
             </p>
             <button class="services__button button">Know More</button>
 
@@ -167,9 +167,8 @@
             <i class="ri-pen-nib-line services__icon"></i>
             <h2 class="services__title">Graphic Designer</h2>
             <p class="services__description">
-              Crafting visually stunning graphics that seamlessly fuse elegance
-              with usability, ensuring an engaging and delightful experience for
-              every viewer
+              Creating attractive visuals that combine beauty with ease of use
+              is key for making sure everyone has a pleasant viewing experience.
             </p>
             <button class="services__button button">Know More</button>
 
@@ -277,7 +276,7 @@
             <a href="project.html?id=25" class="work__link">
               <img
                 loading="lazy"
-                src="./assets/img/projects/InteriorDesignprojectforhotelAmbasciatoriFlorenceItaly/14.png"
+                src="./assets/img/projects/InteriorDesignprojectforhotelAmbasciatoriFlorenceItaly/16.png"
                 alt="Home Work Image"
                 class="work__img"
               />
@@ -309,7 +308,7 @@
             <a href="project.html?id=22" class="work__link">
               <img
                 loading="lazy"
-                src="./assets/img/projects/LightingDesigninspiredbyamovieAmelie/renders.jpg"
+                src="./assets/img/projects/LightingDesigninspiredbyamovieAmelie/moodboard.jpg"
                 alt="Home Work Image"
                 class="work__img"
               />
